--- a/style.css
+++ b/style.css
@@ -15,8 +15,48 @@
 html {
     font-size: 62.5%;
     background-color: var(--very-dark-blue);
+    
 }
 body {
     font-family: "Overpass", sans-serif;
     color: var(--white);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    padding: 4.8rem;
+    
+}
+.main{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: stretch;
+    border-radius: 10px;
+    background-color: var(--dark-blue);
+    gap: 2.4rem;
+    padding: 3.6rem 2.4rem;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.5;
+}
+.icon, .circle{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    background-color: var(--light-gray);
+}
+.circles{
+    display: flex;
+    justify-content: space-evenly;
+}
+@media(min-width: 31.25em){
+    .main{
+        width:41.2rem
+    };
 }
