--- a/style.css
+++ b/style.css
@@ -42,6 +42,13 @@ body {
     font-weight: 400;
     line-height: 1.5;
 }
+h1{
+    font-weight: 400;
+}
+.paragraph-text{
+    color: var(--light-gray);
+    font-size: 1.5rem;
+}
 .icon, .circle{
     display: flex;
     align-items: center;
